// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders only reissue order correctly 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        aria-label="icon: right"
        className="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          style={
            Object {
              "msTransform": "rotate(90deg)",
              "transform": "rotate(90deg)",
            }
          }
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      添加域名记录
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          className="ant-table-wrapper"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-table ant-table-default ant-table-scroll-position-left"
                style={Object {}}
              >
                <div
                  className="ant-table-content"
                >
                  <div
                    className="ant-table-body"
                    onScroll={[Function]}
                    onWheel={[Function]}
                    style={Object {}}
                  >
                    <table
                      className=""
                      style={Object {}}
                    >
                      <colgroup>
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                      </colgroup>
                      <thead
                        className="ant-table-thead"
                      >
                        <tr
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  #
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  修改时间
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  添加域名
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  状态
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  操作
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        className="ant-table-tbody"
                      >
                        <tr
                          className="ant-table-row ant-table-row-level-0"
                          data-row-key="599bd168f9537d2217000001"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onDoubleClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="ant-table-row-indent indent-level-0"
                              style={
                                Object {
                                  "paddingLeft": "0px",
                                }
                              }
                            />
                            1
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            2017-08-22 14:38:32
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            未修改
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="status-done"
                            >
                              已签发
                            </span>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span>
                              <a
                                href="javascript:;"
                              >
                                <button
                                  className="ant-btn ant-btn-link"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <span>
                                    验证信息
                                  </span>
                                </button>
                              </a>
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders replace order info correctly 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        aria-label="icon: right"
        className="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          style={
            Object {
              "msTransform": "rotate(90deg)",
              "transform": "rotate(90deg)",
            }
          }
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
          />
        </svg>
      </i>
      添加域名记录
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          className="ant-table-wrapper"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-table ant-table-default ant-table-scroll-position-left"
                style={Object {}}
              >
                <div
                  className="ant-table-content"
                >
                  <div
                    className="ant-table-body"
                    onScroll={[Function]}
                    onWheel={[Function]}
                    style={Object {}}
                  >
                    <table
                      className=""
                      style={Object {}}
                    >
                      <colgroup>
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                        <col
                          style={
                            Object {
                              "minWidth": undefined,
                              "width": undefined,
                            }
                          }
                        />
                      </colgroup>
                      <thead
                        className="ant-table-thead"
                      >
                        <tr
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  #
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  修改时间
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  添加域名
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  状态
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                          <th
                            className=""
                          >
                            <span
                              className="ant-table-header-column"
                            >
                              <div>
                                <span
                                  className="ant-table-column-title"
                                >
                                  操作
                                </span>
                                <span
                                  className="ant-table-column-sorter"
                                />
                              </div>
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        className="ant-table-tbody"
                      >
                        <tr
                          className="ant-table-row ant-table-row-level-0"
                          data-row-key="599d67e8f9537d17fc000001"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onDoubleClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="ant-table-row-indent indent-level-0"
                              style={
                                Object {
                                  "paddingLeft": "0px",
                                }
                              }
                            />
                            1
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            2017-08-23 19:32:56
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <div>
                              <div>
                                test-1-3.qiniu.io
                              </div>
                              <div>
                                *.test-1-4.qiniu.io
                              </div>
                              <div>
                                *.test-1-5.qiniu.io
                              </div>
                              <div>
                                *.test-1-6.qiniu.io
                              </div>
                            </div>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="status-done"
                            >
                              已签发
                            </span>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span />
                          </td>
                        </tr>
                        <tr
                          className="ant-table-row ant-table-row-level-0"
                          data-row-key="599d3c35f9537d241f000001"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onDoubleClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="ant-table-row-indent indent-level-0"
                              style={
                                Object {
                                  "paddingLeft": "0px",
                                }
                              }
                            />
                            2
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            2017-08-23 16:26:29
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <div>
                              <div>
                                *.test-1-8.qiniu.io
                              </div>
                              <div>
                                *.test-1-9.qiniu.io
                              </div>
                              <div>
                                *.test-1-7.qiniu.io
                              </div>
                            </div>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="status-closed"
                            >
                              已关闭
                            </span>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span />
                          </td>
                        </tr>
                        <tr
                          className="ant-table-row ant-table-row-level-0"
                          data-row-key="599c0675f9537d3f4c000004"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onDoubleClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="ant-table-row-indent indent-level-0"
                              style={
                                Object {
                                  "paddingLeft": "0px",
                                }
                              }
                            />
                            3
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            2017-08-22 18:24:53
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            未修改
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="status-pending"
                            >
                              待确认
                            </span>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span>
                              <a
                                href="javascript:;"
                              >
                                <button
                                  className="ant-btn ant-btn-link"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <span>
                                    关闭订单
                                  </span>
                                </button>
                              </a>
                            </span>
                          </td>
                        </tr>
                        <tr
                          className="ant-table-row ant-table-row-level-0"
                          data-row-key="599bd168f9537d2217000001"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onDoubleClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "height": null,
                            }
                          }
                        >
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="ant-table-row-indent indent-level-0"
                              style={
                                Object {
                                  "paddingLeft": "0px",
                                }
                              }
                            />
                            4
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            2017-08-22 14:38:32
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            未修改
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span
                              className="status-done"
                            >
                              已签发
                            </span>
                          </td>
                          <td
                            className=""
                            onClick={[Function]}
                          >
                            <span />
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
